started add flow, missing handling free text response use Day instead of DayOfWeek moved some files around
