# ShevaTahanotNotifier/Database/Entities/NotificationSchedule.cs
@@ -1,3 +1,5 @@
+using ShevaTahanotNotifier.Database.Entities.Enums;
+
 namespace ShevaTahanotNotifier.Database.Entities;
 
 public class NotificationSchedule : BaseEntity
@@ -5,7 +7,7 @@ public class NotificationSchedule : BaseEntity
     public Guid UserId { get; set; }
     public virtual User? User { get; set; }
     public bool Enabled { get; set; }
-    public DayOfWeek DayOfWeek { get; set; }
+    public Day Day { get; set; }
     public short Hour { get; set; }
     public short Minute { get; set; }
 }
